# rad

./: .gitmodules  README.md
docs/: architecture.md  conops.md
firmware/: Cargo.toml  README.md
firmware/docs/: architecture.md
firmware/drones/esp32-drone/: Cargo.toml  README.md
firmware/esp32/: Cargo.toml
firmware/esp32/.cargo/: config.toml
firmware/src/: flight_controller.rs  lib.rs  vehicle.rs
firmware/src/flight_controller/: mod.rs
firmware/src/gps/: gps_dummy.rs  mod.rs
firmware/src/imu/: imu_dummy.rs  mod.rs
firmware/vehicles/: README.md
firmware/vehicles/esp32-drone/: Cargo.toml
firmware/vehicles/esp32-drone/src/: vehicle.rs
