[package]
name    = "rad-drone"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
# re-exported dependencies
embassy-time = "*"

# internal dependencies
embassy-executor = "*"
log = "*"

# FIXME static_cell      = { version = "2.1.0", features = ["nightly"] }
# static_cell = "2.1"
# heapless         = { version = "0.8.0", default-features = false, features = [ "portable-atomic", ] }
# heapless = "0.8"

# embassy support
# embassy-net      = { version = "0.6", features = ["udp", "tcp"] }

# dhcp sever support
# edge-nal-embassy = "0.5"
# edge-nal = "0.5"
# edge-dhcp = "0.5"