[package]
name    = "rad-drone"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
# re-exported dependencies
embassy-time = "*"

# internal dependencies
embassy-executor = "*"
log = "*"

# imu = "*" Doesn't currently support nostd
# imu = { git="https://github.com/redengin/imu" }
# imu = { path="imu/imu" }
# imu-traits = { path="imu/imu/imu-traits", features=["nostd"] }
# imu-bmi088 = { path="imu/imu/drivers/bmi088", features=["nostd"] }
# ahrs = "*"

# FIXME static_cell      = { version = "2.1.0", features = ["nightly"] }
# static_cell = "2.1"
# heapless         = { version = "0.8.0", default-features = false, features = [ "portable-atomic", ] }
# heapless = "0.8"

# embassy support
# embassy-net      = { version = "0.6", features = ["udp", "tcp"] }

# dhcp sever support
# edge-nal-embassy = "0.5"
# edge-nal = "0.5"
# edge-dhcp = "0.5"